--- a/example/components/Nav.css
+++ b/example/components/Nav.css
@@ -3,3 +3,15 @@
 	width: 100%;
 	height: 200px;
 }
+
+.nav ul {
+	margin: 0;
+	padding: 0;
+
+}
+.nav li {
+	background: lightblue;
+	list-style-type: none;
+	margin: 0;
+	padding: 15px 3%;
+}
