--- a/example/components/Nav.html
+++ b/example/components/Nav.html
@@ -1,4 +1,7 @@
-<div class="nav">
+<div class="no-select nav">
+	<a class='add-thing'>Add Thing At End</a>
+	<a class='remove-thing'>Remove First Thing</a>
+	<a class='wipe-things'>Wipe All</a>
 	<ul>
 		<region id="navOperations" default="Operation" />
 	</ul>
