--- a/example/components/Nav.html
+++ b/example/components/Nav.html
@@ -3,6 +3,7 @@
 	<a class='remove-thing'>Remove First Thing</a>
 	<a class='wipe-things'>Wipe All</a>
 	<ul>
-		<region id="navOperations" default="Operation" />
+		<span class="emptyhtml">Out of rainbows...</span>
+		<region id="navOperations" />
 	</ul>
 </div>
