Changed up nomenclature

--- a/example/components/Rainbow.html
+++ b/example/components/Rainbow.html
@@ -4,6 +4,6 @@
 	<a class='wipe-things'>Wipe All</a>
 	<ul>
 		<span class="emptyhtml">Out of rainbows...</span>
-		<region id="navOperations" />
+		<region id="rows" />
 	</ul>
 </div>
