--- a/example/basic/views/home/index.ejs
+++ b/example/basic/views/home/index.ejs
@@ -2,4 +2,4 @@
 <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700' rel='stylesheet'/> -->
 <link href='http://sailsjs.org/styles/fonts.css' rel='stylesheet'/>
 
-<region count="3" template="App"></region>
+<region template="App"></region>
