--- a/example/basic/assets/linker/templates/App.html
+++ b/example/basic/assets/linker/templates/App.html
@@ -1,4 +1,10 @@
 <div>
 <h1>Test</h1>
 
+<h2>My region #1</h2>
+<region data-id="region_no1"></region>
+
+<h2>My region #2</h2>
+<region data-id="region_no2" default="Dog"></region>
+
 </div>
