shorthand now supports pushstate, added support for new double-pound-sign shorthand for doing 'cover-your-tracks' client-side routing (for route events you don't want stored in your users' history stacks)

--- a/example/basic/assets/linker/templates/App.html
+++ b/example/basic/assets/linker/templates/App.html
@@ -5,6 +5,6 @@
 <region data-id="region_no1"></region>
 
 <h2>My region #2</h2>
-<region data-id="region_no2" default="Dog"></region>
+<region count="1" data-id="region_no2" default="Dog"></region>
 
 </div>
