--- a/example/basic/views/layout.ejs
+++ b/example/basic/views/layout.ejs
@@ -96,6 +96,9 @@
 
 
     <script>
+
+    Mast.debug = true;
+    
     // Modify JST templates to eliminate the nasty parts of the file path
     for (var key in JST) {
       var id = key.match(/\/([^\/]+)\..+$/)[1];
