now Mast.debug is on by default.  Added e.stopPropagation() shorthand.

--- a/example/basic/views/layout.ejs
+++ b/example/basic/views/layout.ejs
@@ -90,6 +90,7 @@
     <script src="/linker/js/sails.io.js"></script>
     <script src="/linker/js/mast.dev.js"></script>
     <script src="/linker/js/app.js"></script>
+    <script src="/linker/js/Body.js"></script>
     <script src="/linker/js/Dog.js"></script>
     <!--SCRIPTS END-->
 
@@ -111,7 +112,7 @@
       window.location.hash = '#!';
     }
 
-    // DAT MASST
+
     Mast.raise();
   </script>
   </body>
