--- a/example/basic/views/layout.ejs
+++ b/example/basic/views/layout.ejs
@@ -100,6 +100,7 @@
     <script>
 
     Mast.debug = true;
+    // Mast.logLevel = 'verbose';
     
     // Modify JST templates to eliminate the nasty parts of the file path
     for (var key in JST) {
