Added proper logger-- really need to get a better build solution in here soon (looking like Grunt + browserify)

--- a/example/basic/views/layout.ejs
+++ b/example/basic/views/layout.ejs
@@ -99,8 +99,8 @@
 
     <script>
 
-    Mast.debug = true;
-    // Mast.logLevel = 'verbose';
+    
+    Mast.logLevel = 'debug';
     
     // Modify JST templates to eliminate the nasty parts of the file path
     for (var key in JST) {
