--- a/example/basic/assets/linker/templates/App.html
+++ b/example/basic/assets/linker/templates/App.html
@@ -5,6 +5,6 @@
 <region data-id="region_no1"></region>
 
 <h2>My region #2</h2>
-<region count="1" data-id="region_no2" default="Dog"></region>
+<region data-id="region_no2" template="Dog"></region>
 
 </div>
