--- a/example/basic/assets/linker/templates/Dog.html
+++ b/example/basic/assets/linker/templates/Dog.html
@@ -1,4 +1,26 @@
-<div>
+<div class="dog">
+	<input type="checkbox"/>
 	<h5>My Dog</h5>
 	<p>Description goes here...</p>
+	
+	<style type="text/css">
+
+		/* hacky stuff-- just here so we can see what's going on */
+
+		/* plain old dog styles */
+		.dog input {
+			display: block;
+			float: left;
+		}
+
+		/* when dog is highlighted */
+		.highlighted.dog {
+			background: yellow;
+		}
+		.highlighted.dog input {
+			display: none;
+		}
+
+	</style>
 </div>
+
