--- a/example/basic/views/layout.ejs
+++ b/example/basic/views/layout.ejs
@@ -28,7 +28,7 @@
     -->
 
     <!--STYLES-->
-    
+    <link rel="stylesheet" href="/linker/styles/layout.css">
     <!--STYLES END-->
   </head>
 
@@ -91,6 +91,7 @@
     <script src="/linker/js/mast.dev.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/Body.js"></script>
+    <script src="/linker/js/Breed.js"></script>
     <script src="/linker/js/Dog.js"></script>
     <!--SCRIPTS END-->
 
