--- a/example/basic/assets/linker/templates/Home.html
+++ b/example/basic/assets/linker/templates/Home.html
@@ -1,3 +1,3 @@
 <h2>Check out all my cool dogs</h2>
 
-<region data-id="dogList" template="Dog"></region>
+<region data-id="dogList" template="Breed"></region>
