--- a/example/styles/layout.css
+++ b/example/styles/layout.css
@@ -15,3 +15,19 @@
 }
 
 
+/* Selector to pick out clickable/touchable things */
+[data-framework-clickable="true"] {
+
+
+	/* Disable text selection */
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: moz-none;
+	-ms-user-select: none;
+	user-select: none;
+
+
+	/* Use hand cursor */
+	cursor: pointer;
+}
